--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+  <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script> -->
+  <title>To Do List</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div>
+  <h1 id="a1">To-Do List</h1>
+  <ul id="listTable">
+		<!-- <li>one <button type="button">Delete</button></li> -->
+		<li>Smile</li>
+		<li>Be happy~</li>
+  </ul>
+
+  <form>
+  	Add Item Here <br>
+  	<input type="text" id="input"> <br>
+  	<input type="submit" value="Submit" id="submitButton">
+  </form>
+</div>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
